--- a/css/styles-presave.css
+++ b/css/styles-presave.css
@@ -5,6 +5,21 @@
   box-sizing: border-box;
 }
 
+a {
+  -webkit-tap-highlight-color: transparent;
+   text-decoration: none;
+  outline: none;
+}
+
+
+* {
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+
+
+
 /* BASE */
 body {
   font-family: 'Silkscreen', monospace;
@@ -26,9 +41,9 @@ body {
   width: 100%;
   max-width: 1200px;
   height: 100%;
-  padding: 40px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 10vw;
 }
 
 
@@ -55,7 +70,8 @@ body {
 
 
 .date {
-  color: #ff008c;
+  color: #ff008c !important;
+  -webkit-text-fill-color: #ff008c;
   font-size: 3vw;
   letter-spacing: 3px;
   margin-bottom: 16px;
@@ -91,13 +107,13 @@ h1 {
   .wrapper {
     flex-direction: column;
     justify-content: space-between;
-    min-height: 100svh;
-    padding: 24px;
+    height: 100%;
   }
 
   .content {
     order: 1;
-    margin-top: 40px;
+    justify-content: flex-start;
+    margin-top: 32px;
   }
 
   .visual {
@@ -108,21 +124,23 @@ h1 {
   }
 
   .visual img {
-    width: 260px;
-    margin-bottom: 0;
+    width: auto;
+    height: 55vh;
   }
 
-
  h1 {
-    font-size: 52px;
+    font-size: 12vw;
     letter-spacing: 4px;
   }
 
   .date {
-    font-size: 18px;
-  }
+    padding-top: 4vh;
+    font-size: 6vw;
+    color: #ff008c;
+}
+
 
   .links a {
-    font-size: 20px;
+    font-size: 5vw;
   }
 }
